style file index.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,9 +11,7 @@
         <a href="contacts.html">Контакты</a>
     </header>
     <main>
-        <hr>
-        <h1 align="center"> Моя первая веб-страница</h1>
-        <hr>
+        <h1>Моя первая веб-страница</h1>
         <h2>Про меня</h2>
         <p>Меня зовут Антон. Я работаю <strong>Логистом</strong>. Решил обучиться новой профессии и разобраться как устроен веб.</p>
         <p>Живу в Волгограде. Люблю самообразование и играю на музыкальных инструментах.</p>
